projects/compiler/test/parser/map_error_no_colon_eof.out
Error at %FILE_NAME%:1:4
Unexpected end of file:
  |  { abc
        ^